--- a/beroende.rmd
+++ b/beroende.rmd
@@ -12,7 +12,7 @@ Detta kapitel innehåller:
 
 De _basala ganglierna_ är en samling områden i hjärnan som är inblandade i flera funktioner, bland annat inlärning, motorik, känslor och kognition. Den beroendeframkallande effekten av vissa droger kan förklaras med olika processer där de basala ganglierna är inblandade. Deras anatomi och övergripande funktioner beskrivs i kapitel \@ref(basal-ganglia). Här följer en beskrivning av hur olika strukturer och processer i hjärnan är kopplade till beroende.
 
-_Striatum_ kallas ett område i hjärnan som har betydelse för vår förmåga att välja mellan olika impulser för att nå bästa möjliga utfall. Detta område ingår i hjärnans belöningssystem, som aktiveras av droger. [@Volkow:2015] När en beroendeframkallande drog (exemplevis kokain, amfetamin eller nikotin) används påverkas nervceller belägna i mitthjärnan (lat. _mesencephalon_), närmare bestämt den del av den "svarta substansen" (lat. _sustanta nigra_) som _benämns par compacta_, så att de via sina axoner frisätter höga nivåer dopamin till ett område i striatum kallat accumbenskärnan (lat. _nucleus accumbens_). Där finns celler med D1-receptorer som aktiveras av dopamin. De ingår i den sk "direkta banan" vars aktivering leder till desinhibering av _talamus_, vilket främjar beteendet[belöning?]. Där finns även andra cellgrupper, som istället har D2-receptorer och ingår i den "indirekta banan". Dessa celler _hämmas_ av dopamin, vilket via kopplingar i andra nervkärnor stimulerar till ökad aktivitet i talamus. Förändrad aktivitet i båda dessa banor leder därmed till att beteendet förstärks.
+_Striatum_ kallas ett område i hjärnan som har betydelse för vår förmåga att välja mellan olika impulser för att nå bästa möjliga utfall. Detta område ingår i hjärnans belöningssystem, som aktiveras av droger. [@Volkow2015] När en beroendeframkallande drog (exemplevis kokain, amfetamin eller nikotin) används påverkas nervceller belägna i mitthjärnan (lat. _mesencephalon_), närmare bestämt den del av den "svarta substansen" (lat. _sustanta nigra_) som _benämns par compacta_, så att de via sina axoner frisätter höga nivåer dopamin till ett område i striatum kallat accumbenskärnan (lat. _nucleus accumbens_). Där finns celler med D1-receptorer som aktiveras av dopamin. De ingår i den sk "direkta banan" vars aktivering leder till desinhibering av _talamus_, vilket främjar beteendet[belöning?]. Där finns även andra cellgrupper, som istället har D2-receptorer och ingår i den "indirekta banan". Dessa celler _hämmas_ av dopamin, vilket via kopplingar i andra nervkärnor stimulerar till ökad aktivitet i talamus. Förändrad aktivitet i båda dessa banor leder därmed till att beteendet förstärks.
 
 För adapteringen till dopaminagonister är direkta banan av störst betydelse.
 
@@ -47,9 +47,9 @@ Dorsal striatum
 
 ### Referenser
 
-Striatal direct and indirect pathways control decision-making behavior [@Macpherson:2014]
+Striatal direct and indirect pathways control decision-making behavior [@Macpherson2014]
 
-Brain on drugs [@Volkow:2015].
+Brain on drugs [@Volkow2015].
 
 Film om direct pathway (Khan acaemy): https://www.khanacademy.org/science/health-and-medicine/nervous-system-diseases/parkinsons-disease/v/the-basal-ganglia-the-direct-pathway
 
@@ -140,7 +140,7 @@ Suicidrisk mm
 
 ### AUDIT
 
-AUDIT[@Bohn:1995;@Reinert:2007].
+AUDIT[@Bohn1995;@Reinert2007].
 
 ### DUDIT
 
