--- a/test.bib
+++ b/test.bib
@@ -1,5 +1,5 @@
-@Inbook{apa2013bipolari,
-    author = {American Psychiatric Association},
+@Inbook{apa2013bipolariidisorder,
+    author = {{American Psychiatric Association}},
     title = {Diagnostic and Statistical Manual of Mental Disorders},
     chapter = {Bipolar and Related Disorders, section Bipolar II disorder},
     pages = {123ff},
