--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -1,5 +1,16 @@
 # Bipolär sjukdom
 
+Vad är det.
+
+Teorier om patofysiologi.
+
+Epidemiologi.
+
+Samsjuklighet/riskbeteenden.
+
+DSM-5
+
+
 ## Skattningsinstrument
 
 Miller CJ, Johnson SL, Eisner L Assessment Tools for Adult Bipolar Disorder. Clin Psychol (New York). 2009 Jun; 16:(2)188-201
