--- a/index.rmd
+++ b/index.rmd
@@ -1,5 +1,5 @@
 ---
-bibliography: ["../library/psychiatry.bib"]
+bibliography: ["../bibliography/bibliography.bib"]
 csl: ../bibliography/oxford-scimed.csl
 
 ---
