--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -10,6 +10,97 @@ Samsjuklighet/riskbeteenden.
 
 DSM-5
 
+## Diagnostik
+
+Huvudkriteriet för diagnosen bipolär sjukdom är förekomst av mani (vid typ I) eller hypomani (vid typ II). Episoder med depression är inte obligat, men vanligt, och särskilt framträdande vid typ II.
+
+En manisk episod innebär att stämningsläget är förhöjt, expansivt [förklara] eller irritabelt tillsammans med ökad energi eller målinriktad aktivitet [förklara].
+
+För att betraktas som en manisk episod krävs att förändringen i stämningsläge och aktivitet är ihållande (föreligger nästan varje dag och större delen av dagen) under en tydligt avgränsad period (dvs inte ett varaktigt beteende) som varar minst en vecka. Om besvären är så påtagliga att de leder till sjukhusinläggning kan perioden dock vara kortare (ingen nedre gräns) och ändå räknas som en manisk episod.
+
+_Exempel_
+
+Dessutom krävs att tre eller fler av följande symtom föreligger (samtidigt som förändringen i stämningsläge och aktivitet): Uppblåst självförtroende eller _grandiositet_ [förklara]
+
+
+
+## Diagnos enl DSM-5
+
+### Manic Episode
+
+> A. A distinct period of abnormally and persistently elevated, expansive, or irritable mood and abnormally and persistently increased goal-directed activity or energy, lasting at least 1 week and present most of the day, nearly every day (or any duration if hospitalization is necessary).
+
+> B. During the period of mood disturbance and increased energy or activity, three (or more) of the following symptoms (four if the mood is only irritable) are present to a significant degree and represent a noticeable change from usual behavior:
+
+> 1. Inflated self-esteem or grandiosity.
+
+> 2. Decreased need for sleep (e.g., feels rested after only 3 hours of sleep).
+
+> 3. More talkative than usual or pressure to keep talking.
+
+> 4. Flight of ideas or subjective experience that thoughts are racing.
+
+> 5. Distractibility (i.e., attention too easily drawn to unimportant or irrelevant external stimuli), as reported or observed.
+
+> 6. Increase in goal-directed activity (either socially, at work or school, or sexually) or psychomotor agitation (i.e., puoseless non-goal-directed activity).
+
+> 7. Excessive involvement in activities that have a high potential for painful consequences (e.g., engaging in unrestrained buying sprees, sexual indiscretions, or foolish business investments).
+
+> C. The mood disturbance is sufficiently severe to cause marked impairment in social or occupational functioning or to necessitate hospitalization to prevent harm to self or others, or there are psychotic features.
+
+> D. The episode is not attributable to the physiological effects of a substance (e.g., a drug of abuse, a medication, other treatment) or to another medical condition.
+
+Note: A full manic episode that emerges during antidepressant treatment (e.g., medication, electroconvulsive therapy) but persists at a fully syndromal level beyond the physiological effect of that treatment is sufficient evidence for a manic episode and, therefore, a bipolar I diagnosis.
+
+Note: Criteria A-D constitute a manic episode. At least one lifetime manic episode is required for the diagnosis of bipolar I disorder.
+
+### Bipolar I Disorder
+
+A. Criteria have been met for at least one manic episode (Criteria A-D under “Manic Episode” above).
+
+B. The occurrence of the manic and major depressive episode(s) is not better explained by schizoaffective disorder, schizophrenia, schizophreniform disorder, delusional disorder, or other specified or unspecified schizophrenia spectrum and other psychotic disorder.
+
+
+### Hypomanic Episode
+
+A. A distinct period of abnormally and persistently elevated, expansive, or irritable mood and abnormally and persistently increased activity or energy, lasting at least 4 consecutive days and present most of the day, nearly every day.
+
+B. During the period of mood disturbance and increased energy and activity, three (or more) of the following symptoms (four if the mood is only irritable) have persisted, represent a noticeable change from usual behavior, and have been present to a significant degree:
+
+1. Inflated self-esteem or grandiosity.
+
+2. Decreased need for sleep (e.g., feels rested after only 3 hours of sleep).
+
+3. More talkative than usual or pressure to keep talking.
+
+4. Flight of ideas or subjective experience that thoughts are racing.
+
+5. Distractibility (i.e., attention too easily drawn to unimportant or irrelevant external stimuli), as reported or observed.
+
+6. Increase in goal-directed activity (either socially, at work or school, or sexually) or psychomotor agitation.
+
+7. Excessive involvement in activities that have a high potential for painful consequences (e.g., engaging in unrestrained buying sprees, sexual indiscretions, or foolish business investments).
+
+C. The episode is associated with an unequivocal change in functioning that is uncharacteristic of the individual when not symptomatic.
+
+D. The disturbance in mood and the change in functioning are observable by others.
+
+E. The episode is not severe enough to cause marked impairment in social or occupational functioning or to necessitate hospitalization. If there are psychotic features, the episode is, by definition, manic.
+
+F. The episode is not attributable to the physiological effects of a substance (e.g., a drug of abuse, a medication, other treatment).
+
+Note: A full hypomanic episode that emerges during antidepressant treatment (e.g., medication, electroconvulsive therapy) but persists at a fully syndromal level beyond the physiological effect of that treatment is sufficient evidence for a hypomanic episode diagnosis. However, caution is indicated so that one or two symptoms (particularly increased irritability, edginess, or agitation following antidepressant use) are not taken as sufficient for diagnosis of a hypomanic episode, nor necessarily indicative of a bipolar diathesis.
+
+Note: Criteria A-'F constitute a hypomanic episode. Hypomanic episodes are common in bipolar I disorder but are not required for the diagnosis of bipolar I disorder.
+
+
+
+
+## Behandling
+
+Snabbt isättande av behandling kan motiveras av att maniska perioder kan påverka hjärnan [@Abé2015].
+
+
 
 ## Skattningsinstrument
 
