--- a/ordlista.rmd
+++ b/ordlista.rmd
@@ -2,3 +2,8 @@
 
 **Grandiositet** Personen uppvisar en orealistisk känsla av överlägsenhet, att vara unik eller utvald. Förekommer vid mani, hypomani, narcissistiskt personlighetssyndrom, antisocialt personlighetssyndrom, reactive attachment disorder, [paranoia?]. Ingår i BPRS och PANSS.
 
+**Expansivt stämningsläge** Uppblåst självbild med överdrivna känslouttryck, tex överdriven entusiasm, vänlighet, distanslöshet, klädsel etc. Förekommer vid hypomani och mani.
+
+**Målinriktat beteende** Målinriktat beteende innebär flexibelt val av respons baserat på inlärda kopplingar mellan situation, handling och konsekvens [@de_Wit2009]. Ökat målinriktat beteende förekommer vid mani.
+
+**Ideflykt** 
