--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -103,37 +103,6 @@ kable(x, "latex",
 
 ``` 
 
-_Exempel_
-
-### Manisk episod, diagnoskriterier enligt DSM-5
-
-> A. A distinct period of abnormally and persistently elevated, expansive, or irritable mood and abnormally and persistently increased goal-directed activity or energy, lasting at least 1 week and present most of the day, nearly every day (or any duration if hospitalization is necessary).
-
-> B. During the period of mood disturbance and increased energy or activity, three (or more) of the following symptoms (four if the mood is only irritable) are present to a significant degree and represent a noticeable change from usual behavior:
-
-> 1. Inflated self-esteem or grandiosity.
-
-> 2. Decreased need for sleep (e.g., feels rested after only 3 hours of sleep).
-
-> 3. More talkative than usual or pressure to keep talking.
-
-> 4. Flight of ideas or subjective experience that thoughts are racing.
-
-> 5. Distractibility (i.e., attention too easily drawn to unimportant or irrelevant external stimuli), as reported or observed.
-
-> 6. Increase in goal-directed activity (either socially, at work or school, or sexually) or psychomotor agitation (i.e., puoseless non-goal-directed activity).
-
-> 7. Excessive involvement in activities that have a high potential for painful consequences (e.g., engaging in unrestrained buying sprees, sexual indiscretions, or foolish business investments).
-
-> C. The mood disturbance is sufficiently severe to cause marked impairment in social or occupational functioning or to necessitate hospitalization to prevent harm to self or others, or there are psychotic features.
-
-> D. The episode is not attributable to the physiological effects of a substance (e.g., a drug of abuse, a medication, other treatment) or to another medical condition.
-
-Note: A full manic episode that emerges during antidepressant treatment (e.g., medication, electroconvulsive therapy) but persists at a fully syndromal level beyond the physiological effect of that treatment is sufficient evidence for a manic episode and, therefore, a bipolar I diagnosis.
-
-Note: Criteria A-D constitute a manic episode. At least one lifetime manic episode is required for the diagnosis of bipolar I disorder.
-
-
 ## Behandling
 
 Snabbt isättande av behandling kan motiveras av att maniska perioder kan påverka hjärnan [@Abé2015].
@@ -159,3 +128,7 @@ Skalor för neuropsykiatriska besvär och tvång: http://www.memogen.se/tests.ht
 ## Resources
 
 Mood Disorders A Handbook Of Science And Practice, https://epdf.tips/mood-disorders-a-handbook-of-science-and-practice.html
+
+TOREAD: Mixed states in DSM-5: Implications for clinical care, education, and research vieta [@Vieta2013].
+
+Image for presentation: 'light_and_dark.jpeg', see dropbox.
