--- a/psykofarmakologi.rmd
+++ b/psykofarmakologi.rmd
@@ -35,3 +35,18 @@ Identification and Management of Peripartum Depression [@Langan2016]
 NHS patient recommendations: https://www.nhs.uk/conditions/ssri-antidepressants/considerations/#pregnancy
 
 Associations of Maternal Antidepressant Use During the First Trimester of Pregnancy With Preterm Birth, Small for Gestational Age, Autism Spectrum Disorder, and Attention-Deficit/Hyperactivity Disorder in Offspring [@Sujan2017]
+
+## Neuroleptika
+
+Effect of CYP2D6 genotype on exposure and efficacy of risperidone and aripiprazole: a retrospective, cohort study [@Jukic2019].
+
+Figur \@ref(fig:antipsychotics-dosing-interval) visar relativa doseringsintervall för några antipsykotiska läkemedel. Intervallet som visas är mellan minsta effektiva dos och högsta effektiva dos med måldosen som punktestimat och maxdosen i rött. Inom klamrar anges dosen i milligram: [minsta effektiva dos, måldos, högsta effektiva dos].
+
+```{r antipsychotics-dosing-interval, fig.cap = "Doseringsintervall för antipsykotiska läkemedel" } 
+
+source('antipsychotics-dosing-interval.r', print.eval=TRUE)
+
+p
+
+``` 
+ 
